modifed butten element

--- a/por.html
+++ b/por.html
@@ -48,9 +48,9 @@
             <div class="position-absolute  " id="firstpart">
                 <p class="">Original & Natural</p>
                 <h2 class="fs-2 fw-bold" id="f">Pure, Fresh, and <br> Nutritious</h2>
-                <h2 class="fs-2 fw-bold">From Our Farm to Your Table.</h2>
+                <h2 class="fs-2 fw-bold">From Our Farm to Your Table. hello </h2>
                 <p class="t">Experience the goodness of farm-fresh milk and premium dairy products.</p>
-                <button type="button" class="btn btn-warning" id="btn">Discover More hiii</button>
+                <button type="button" class="btn btn-warning" id="btn">Discover More hiii deleit it </button>
             </div>
         </div>
 
